--- a/desktop/css/coreWidgets.css
+++ b/desktop/css/coreWidgets.css
@@ -112,7 +112,7 @@ Desktop
     right: 5px;
   }
   div.eqLogic_layout_table table.tableCmd {
-    min-width: 0%;
+    width: 100%;
   }
   div.eqLogic_layout_table table.tableCmd td {
     vertical-align: top;
