--- a/core/template/dashboard/cmd.info.string.tmplmultistate.html
+++ b/core/template/dashboard/cmd.info.string.tmplmultistate.html
@@ -8,7 +8,7 @@
   <div class="state">
     <span class="value"></span>
   </div>
-  <div class="timeCmd label label-default"></div>
+  <div class="timeCmd label label-default cursor"></div>
   <template>
     <div>time : duration|date ({{Affiche durée ou date de la valeur}})</div>
   </template>
