test templates time

--- a/core/template/dashboard/cmd.action.other.alert.html
+++ b/core/template/dashboard/cmd.action.other.alert.html
@@ -5,7 +5,7 @@
   <div class="content-sm">
     <span class="execute iconCmd"></span>
   </div>
-  <div class="timeCmd label label-default"></div>
+  <div class="timeCmd label label-default #value_history#" data-type="info" data-cmd_id="#value_id#"></div>
   <template>
     <div>time : duration|date ({{Affiche durée ou date de la valeur}})</div>
   </template>
