--- a/core/template/dashboard/cmd.action.other.binarySwitch.html
+++ b/core/template/dashboard/cmd.action.other.binarySwitch.html
@@ -8,7 +8,7 @@
       </span>
     </label>
   </div>
-  <div class="timeCmd label label-default"></div>
+  <div class="timeCmd label label-default #value_history#" data-type="info" data-cmd_id="#value_id#"></div>
   <template>
     <div>color : rgb(20,20,20) ({{couleur d'arrière plan}})</div>
     <div>color_switch : rgb(230,230,230) ({{couleur de la pastille}})</div>
