--- a/core/template/dashboard/cmd.action.slider.button.html
+++ b/core/template/dashboard/cmd.action.slider.button.html
@@ -13,7 +13,7 @@
       </span>
     </div>
   </div>
-  <div class="timeCmd label label-default"></div>
+  <div class="timeCmd label label-default #value_history#" data-type="info" data-cmd_id="#value_id#"></div>
   <template>
     <div>step : 0.5 ({{Pas du changement de valeur}})</div>
     <div>width : 70 ({{Largeur de la zone de saisie}})</div>
