--- a/core/template/dashboard/cmd.action.slider.default.html
+++ b/core/template/dashboard/cmd.action.slider.default.html
@@ -5,7 +5,7 @@
   <div class="content-sm">
     <div id="widget_slider#id#" class="slider"></div>
   </div>
-  <div class="timeCmd label label-default"></div>
+  <div class="timeCmd label label-default #value_history#" data-type="info" data-cmd_id="#value_id#"></div>
   <template>
     <div>color : rgb(20,20,20) ({{Couleur d'arrière plan}})</div>
     <div>step : 0.5 ({{Pas du changement de valeur}})</div>
