--- a/core/template/dashboard/cmd.info.numeric.line.html
+++ b/core/template/dashboard/cmd.info.numeric.line.html
@@ -2,7 +2,7 @@
   <div class="content-xs">
     <span class="cmdName #hide_name#">#name_display#</span> <span class="value"></span> <strong class="unit"></strong>
   </div>
-  <div class="timeCmd label label-default"></div>
+  <span class="timeCmd label label-default #history#" data-type="info"></span>
   <div class="cmdStats #hide_history#">
     <span title="{{Minimum}}" class="tooltips">#minHistoryValue#</span>|<span title="{{Moyenne}}" class="tooltips">#averageHistoryValue#</span>|<span title="{{Maximum}}" class="tooltips">#maxHistoryValue#</span> <i class="#tendance#"></i>
   </div>
