--- a/core/template/dashboard/cmd.action.color.default.html
+++ b/core/template/dashboard/cmd.action.color.default.html
@@ -5,7 +5,7 @@
   <div class="content-sm">
     <input class="input-sm action action_colorpicker_change" type="color">
   </div>
-  <div class="timeCmd label label-default"></div>
+  <div class="timeCmd label label-default #value_history#" data-type="info" data-cmd_id="#value_id#"></div>
   <template>
     <div>time : duration|date ({{Affiche durée ou date de la valeur}})</div>
   </template>
