--- a/core/template/dashboard/cmd.action.other.btnAlert.html
+++ b/core/template/dashboard/cmd.action.other.btnAlert.html
@@ -5,7 +5,7 @@
       <span class="cmdName #hide_name#">#valueName#</span>
     </a>
   </div>
-  <div class="timeCmd label label-default"></div>
+  <div class="timeCmd label label-default #value_history#" data-type="info" data-cmd_id="#value_id#"></div>
   <template>
     <div>time : duration|date ({{Affiche durée ou date de la valeur}})</div>
   </template>
