--- a/core/template/dashboard/cmd.action.other.tmpliconline.html
+++ b/core/template/dashboard/cmd.action.other.tmpliconline.html
@@ -2,7 +2,7 @@
   <div class="content-xs">
     <span class="cmdName #hide_name#">#name_display#</span> <span class="execute iconCmdLine"></span>
   </div>
-  <div class="timeCmd label label-default"></div>
+  <div class="timeCmd label label-default #value_history#" data-type="info" data-cmd_id="#value_id#"></div>
   <template>
     <div>time : duration|date ({{Affiche durée ou date de la valeur}})</div>
   </template>
