--- a/core/template/dashboard/cmd.action.other.tmplimg.html
+++ b/core/template/dashboard/cmd.action.other.tmplimg.html
@@ -5,7 +5,7 @@
   <div class="content-sm">
     <span class="execute imgCmd"></span>
   </div>
-  <div class="timeCmd label label-default"></div>
+  <div class="timeCmd label label-default #value_history#" data-type="info" data-cmd_id="#value_id#"></div>
   <template>
     <div>time : date ({{Affiche l'info time sous forme de date}})</div>
   </template>
