--- a/core/template/dashboard/cmd.action.slider.shutter.html
+++ b/core/template/dashboard/cmd.action.slider.shutter.html
@@ -13,7 +13,7 @@
   <div class="state">
     <span class="value"></span> <span class="unit"></span>
   </div>
-  <div class="timeCmd label label-default"></div>
+  <div class="timeCmd label label-default #value_history#" data-type="info" data-cmd_id="#value_id#"></div>
   <template>
     <div>color : rgb(20,20,20) ({{Couleur de l'indicateur de valeur}})</div>
     <div>step : 1 ({{Pas du changement de valeur}})</div>
