--- a/core/template/dashboard/cmd.action.slider.tmplicon.html
+++ b/core/template/dashboard/cmd.action.slider.tmplicon.html
@@ -6,7 +6,7 @@
     <div class="cursor execute iconCmd"></div>
     <div id="widget_slider#id#" class="slider"></div>
   </div>
-  <div class="timeCmd label label-default"></div>
+  <div class="timeCmd label label-default #value_history#" data-type="info" data-cmd_id="#value_id#"></div>
   <template>
     <div>color : rgb(20,20,20) ({{Couleur du curseur et valeur}})</div>
     <div>step : 1 ({{Pas du changement de valeur}})</div>
