--- a/core/template/dashboard/cmd.info.binary.shutter.html
+++ b/core/template/dashboard/cmd.info.binary.shutter.html
@@ -12,7 +12,7 @@
   <div class="state">
     <span class="value"></span>
   </div>
-  <div class="timeCmd label label-default"></div>
+  <span class="timeCmd label label-default #history#" data-type="info"></span>
   <template>
     <div>color : rgb(20,20,20) ({{Couleur du curseur et valeur}})</div>
     <div>time : duration|date ({{Affiche durée ou date de la valeur}})</div>
