--- a/core/template/dashboard/cmd.info.binary.tmplicon.html
+++ b/core/template/dashboard/cmd.info.binary.tmplicon.html
@@ -8,7 +8,7 @@
   <div class="state">
     <span class="value"></span>
   </div>
-  <div class="timeCmd label label-default cursor"></div>
+  <span class="timeCmd label label-default #history#" data-type="info"></span>
   <template>
     <div>time : duration|date ({{Affiche durée ou date de la valeur}})</div>
   </template>
