--- a/core/template/dashboard/cmd.info.numeric.rain.html
+++ b/core/template/dashboard/cmd.info.numeric.rain.html
@@ -9,7 +9,7 @@
       <div class="widget-rain-water"></div>
     </div>
   </div>
-  <div class="timeCmd label label-default"></div>
+  <span class="timeCmd label label-default #history#" data-type="info"></span>
   <div class="cmdStats #hide_history#">
     <span title="{{Minimum}}" class="tooltips">#minHistoryValue#</span>|<span title="{{Moyenne}}" class="tooltips">#averageHistoryValue#</span>|<span title="{{Maximum}}" class="tooltips">#maxHistoryValue#</span> <i class="#tendance#"></i>
   </div>
