--- a/core/template/dashboard/cmd.info.numeric.tmplmultistate.html
+++ b/core/template/dashboard/cmd.info.numeric.tmplmultistate.html
@@ -8,7 +8,7 @@
   <div class="state">
     <span class="value"></span>
   </div>
-  <div class="timeCmd label label-default"></div>
+  <span class="timeCmd label label-default #history#" data-type="info"></span>
   <div class="cmdStats #hide_history#">
     <span title="{{Minimum}}" class="tooltips">#minHistoryValue#</span>|<span title="{{Moyenne}}" class="tooltips">#averageHistoryValue#</span>|<span title="{{Maximum}}" class="tooltips">#maxHistoryValue#</span> <i class="#tendance#"></i>
   </div>
