--- a/core/template/dashboard/cmd.info.string.default.html
+++ b/core/template/dashboard/cmd.info.string.default.html
@@ -2,7 +2,7 @@
   <div class="content-xs">
     <span class="cmdName #hide_name#">#name_display#</span> <span class="value"></span> <strong class="unit"></strong>
   </div>
-  <div class="timeCmd label label-default"></div>
+  <span class="timeCmd label label-default #history#" data-type="info"></span>
   <template>
     <div>time : duration|date ({{Affiche durée ou date de la valeur}})</div>
   </template>
