--- a/core/template/dashboard/cmd.info.numeric.compass.html
+++ b/core/template/dashboard/cmd.info.numeric.compass.html
@@ -14,7 +14,7 @@
       <div class="winDir"></div>
     </div>
   </div>
-  <span class="timeCmd label label-default #history#" data-type="info"></span>
+  <div class="timeCmd label label-default #history#" data-type="info"></div>
   <div class="cmdStats #hide_history#">
     <span title="{{Minimum}}" class="tooltips">#minHistoryValue#</span>|<span title="{{Moyenne}}" class="tooltips">#averageHistoryValue#</span>|<span title="{{Maximum}}" class="tooltips">#maxHistoryValue#</span> <i class="#tendance#"></i>
   </div>
