--- a/core/template/dashboard/cmd.info.string.tile.html
+++ b/core/template/dashboard/cmd.info.string.tile.html
@@ -7,7 +7,7 @@
       <span class="value state"></span> <span class="unit pull-right"></span>
     </div>
   </div>
-  <span class="timeCmd label label-default #history#" data-type="info"></span>
+  <div class="timeCmd label label-default #history#" data-type="info"></div>
   <template>
     <div>time : duration|date ({{Affiche durée ou date de la valeur}})</div>
   </template>
