--- a/core/template/dashboard/cmd.info.numeric.tile.html
+++ b/core/template/dashboard/cmd.info.numeric.tile.html
@@ -7,7 +7,7 @@
       <span class="value state"></span> <span class="unit pull-right"></span>
     </div>
   </div>
-  <span class="timeCmd label label-default #history#" data-type="info"></span>
+  <div class="timeCmd label label-default #history#" data-type="info"></div>
   <div class="cmdStats #hide_history#">
     <span title="{{Minimum}}" class="tooltips">#minHistoryValue#</span>|<span title="{{Moyenne}}" class="tooltips">#averageHistoryValue#</span>|<span title="{{Maximum}}" class="tooltips">#maxHistoryValue#</span> <i class="#tendance#"></i>
   </div>
