--- a/core/template/dashboard/cmd.info.numeric.horizontal.html
+++ b/core/template/dashboard/cmd.info.numeric.horizontal.html
@@ -33,8 +33,8 @@
           width = Math.round(parseFloat(width) * 10) / 10
 
           cmd.querySelector('.hgauge-value').style.width = width + '%'
-          cmd.querySelector('.value').innerText = _options.display_value
-          cmd.querySelector('.unit').innerText = _options.unit
+          cmd.querySelector('.value').innerHTML = _options.display_value
+          cmd.querySelector('.unit').innerHTML = _options.unit
         } else {
           cmd.querySelector('.value').innerHTML = '<span class="label label-danger">' + _options.value + '</span>'
         }
