--- a/core/template/dashboard/cmd.info.numeric.light.html
+++ b/core/template/dashboard/cmd.info.numeric.light.html
@@ -30,8 +30,8 @@
             cmd.querySelector('.iconCmd').innerHTML = '<i class="icon jeedom-lumiere-off"></i>'
           }
 
-          cmd.querySelector('.value').innerText = _options.display_value
-          cmd.querySelector('.unit').innerText = _options.unit
+          cmd.querySelector('.value').innerHTML = _options.display_value
+          cmd.querySelector('.unit').innerHTML = _options.unit
         }
 
         if (_options.alertLevel == 'warning') {
