--- a/core/template/dashboard/cmd.info.numeric.rain.html
+++ b/core/template/dashboard/cmd.info.numeric.rain.html
@@ -42,8 +42,8 @@
           height = Math.round(parseFloat(height) * 10) / 10
 
           cmd.querySelector('.widget-rain-water').style.height = height + '%'
-          cmd.querySelector('.value').innerText = _options.display_value
-          cmd.querySelector('.unit').innerText = _options.unit
+          cmd.querySelector('.value').innerHTML = _options.display_value
+          cmd.querySelector('.unit').innerHTML = _options.unit
         } else {
           cmd.querySelector('.value').innerHTML = '<span class="label label-danger">' + _options.value + '</span>'
         }
@@ -65,7 +65,7 @@
       document.querySelector('.cmd[data-cmd_uid="#uid#"] .widget-rain-water').style.animation = 'none'
     }
     if ('#showRange#' == '1') {
-      document.querySelector('.cmd[data-cmd_uid="#uid#"] .plage').innerText = '#minValue# → #maxValue#'
+      document.querySelector('.cmd[data-cmd_uid="#uid#"] .plage').innerHTML = '#minValue# → #maxValue#'
     }
   </script>
 </div>
