--- a/core/template/dashboard/cmd.info.string.default.html
+++ b/core/template/dashboard/cmd.info.string.default.html
@@ -14,8 +14,8 @@
           jeedom.cmd.displayDuration(_options.valueDate, cmd.querySelector('.timeCmd'), '#time#')
         }
 
-        cmd.querySelector('.value').innerText = _options.display_value
-        cmd.querySelector('.unit').innerText = _options.unit
+        cmd.querySelector('.value').innerHTML = _options.display_value
+        cmd.querySelector('.unit').innerHTML = _options.unit
 
         if (_options.alertLevel == 'warning') {
           cmd.querySelector('.value').innerHTML = '<span class="label label-warning"><i class="fas fa-bell"></i> ' + _options.value + '</span>'
