--- a/core/template/scenario/report.default.html
+++ b/core/template/scenario/report.default.html
@@ -50,7 +50,7 @@
 <script>
   jeedom.view.all({
     error: function (error) {
-      $.fn.showAlert({message: error.message, level: 'danger'})
+      jeedomUtils.showAlert({message: error.message, level: 'danger'})
     },
     success: function (views) {
       var select = document.querySelector('.expressionAttr[data-uid="#uid#"][data-l1key="options"][data-l2key="view_id"]')
@@ -73,7 +73,7 @@
 
   jeedom.plan.allHeader({
     error: function (error) {
-      $.fn.showAlert({message: error.message, level: 'danger'})
+      jeedomUtils.showAlert({message: error.message, level: 'danger'})
     },
     success: function (plans) {
       var select = document.querySelector('.expressionAttr[data-uid="#uid#"][data-l1key="options"][data-l2key="plan_id"]')
@@ -96,7 +96,7 @@
 
   jeedom.plugin.all({
     error: function (error) {
-      $.fn.showAlert({message: error.message, level: 'danger'})
+      jeedomUtils.showAlert({message: error.message, level: 'danger'})
     },
     success: function (plugins) {
       var select = document.querySelector('.expressionAttr[data-uid="#uid#"][data-l1key="options"][data-l2key="plugin_id"]')
@@ -119,7 +119,7 @@
 
   jeedom.timeline.listFolder({
     error: function (error) {
-      $.fn.showAlert({message: error.message, level: 'danger'})
+      jeedomUtils.showAlert({message: error.message, level: 'danger'})
     },
     success: function (timelines) {
       var select = document.querySelector('.expressionAttr[data-uid="#uid#"][data-l1key="options"][data-l2key="timeline"]')
