--- a/core/template/dashboard/cmd.action.message.default.html
+++ b/core/template/dashboard/cmd.action.message.default.html
@@ -1,5 +1,5 @@
 <div class="cmd cmd-widget reportModeHidden" data-type="action" data-subtype="message" data-template="default" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#">
-  <div class="content-lg">
+  <div class="content">
     <input class="input-sm title" placeholder="#title_placeholder#" value="#title#">
     <textarea class="form-control input-sm message" rows="2" placeholder="#message_placeholder#">#message#</textarea>
     <a class="btn btn-xs execute">#name_display#</a>
