--- a/core/template/dashboard/cmd.action.other.alert.html
+++ b/core/template/dashboard/cmd.action.other.alert.html
@@ -1,8 +1,8 @@
 <div class="cmd cmd-widget cursor" data-type="action" data-subtype="other" data-template="alert" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#">
   <div class="title #hide_name#">
-    <span class="cmdName">#name_display#</span>
+    <div class="cmdName">#name_display#</div>
   </div>
-  <div class="content-sm">
+  <div class="content">
     <span class="execute iconCmd"></span>
   </div>
   <div class="timeCmd label label-default #value_history#" data-type="info" data-cmd_id="#value_id#"></div>
