--- a/core/template/dashboard/cmd.action.other.binarySwitch.html
+++ b/core/template/dashboard/cmd.action.other.binarySwitch.html
@@ -1,5 +1,5 @@
 <div class="cmd cmd-widget cursor" data-type="action" data-subtype="other" data-template="binarySwitch" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#">
-  <div class="content-xs widthx2">
+  <div class="content-xs">
     <span class="cmdName #hide_name#">#valueName#</span>
     <label class="binarySwitch">
       <input type="checkbox" class="binarySwitch">
