--- a/core/template/dashboard/cmd.action.other.default.html
+++ b/core/template/dashboard/cmd.action.other.default.html
@@ -1,5 +1,5 @@
 <div class="cmd cmd-widget reportModeHidden" data-type="action" data-subtype="other" data-template="default" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#">
-  <div class="content-sm">
+  <div class="content-xs">
     <a class="btn btn-sm btn-default execute tooltips">#name_display#</a>
   </div>
   <template></template>
