--- a/core/template/dashboard/cmd.action.slider.sliderVertical.html
+++ b/core/template/dashboard/cmd.action.slider.sliderVertical.html
@@ -1,6 +1,6 @@
 <div class="cmd cmd-widget" data-type="action" data-subtype="slider" data-template="vertical" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#">
   <div class="title #hide_name#">
-    <span class="cmdName">#name_display#</span>
+    <div class="cmdName">#name_display#</div>
   </div>
   <div class="content">
     <div id="widget_slider#id#" class="slider"></div>
