--- a/core/template/dashboard/cmd.info.binary.tmpliconline.html
+++ b/core/template/dashboard/cmd.info.binary.tmpliconline.html
@@ -6,6 +6,9 @@
     <span class="value"></span>
   </div>
   <div class="timeCmd label label-default #history#" data-type="info"></div>
+  <div class="cmdStats #hide_history#">
+    <span title="{{Minimum}}" class="tooltips">#minHistoryValue#</span>|<span title="{{Moyenne}}" class="tooltips">#averageHistoryValue#</span>|<span title="{{Maximum}}" class="tooltips">#maxHistoryValue#</span> <i class="#tendance#"></i>
+  </div>
   <template>
     <div>time : duration|date ({{Affiche durée ou date de la valeur}})</div>
   </template>
