--- a/core/template/dashboard/cmd.info.numeric.badge.html
+++ b/core/template/dashboard/cmd.info.numeric.badge.html
@@ -1,8 +1,8 @@
 <div class="cmd cmd-widget #history#" data-type="info" data-subtype="numeric" data-template="badge" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#">
   <div class="title #hide_name#">
-    <span class="cmdName">#name_display#</span>
+    <div class="cmdName">#name_display#</div>
   </div>
-  <div class="content-sm">
+  <div class="content">
     <div class="label label-info state"><span class="value"></span> <span class="unit"></span></div>
   </div>
   <div class="timeCmd label label-default #history#" data-type="info"></div>
