--- a/core/template/dashboard/cmd.info.numeric.rain.html
+++ b/core/template/dashboard/cmd.info.numeric.rain.html
@@ -1,6 +1,6 @@
 <div class="cmd cmd-widget widget-rain #history#" data-type="info" data-subtype="numeric" data-template="rain" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#">
   <div class="title #hide_name#">
-    <span class="cmdName">#name_display#</span>
+    <div class="cmdName">#name_display#</div>
   </div>
   <div class="state"><span class="value"></span> <span class="unit"></span></div>
   <div class="content">
