--- a/core/template/dashboard/cmd.action.other.btnAlert.html
+++ b/core/template/dashboard/cmd.action.other.btnAlert.html
@@ -1,5 +1,5 @@
 <div class="cmd cmd-widget" data-type="action" data-subtype="other" data-cmd_id="#id#" data-template="btnAlert" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#">
-  <div class="content-sm">
+  <div class="content">
     <a class="btn btn-sm btn-default execute cmdName tooltips" title="#name#">
       <span class="iconCmdLine"></span>
       <span class="cmdName #hide_name#">#valueName#</span>
