--- a/core/template/dashboard/cmd.action.slider.tmplimg.html
+++ b/core/template/dashboard/cmd.action.slider.tmplimg.html
@@ -1,6 +1,6 @@
 <div class="cmd cmd-widget #history#" data-type="action" data-subtype="numeric" data-template="tmplicon" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#">
   <div class="title #hide_name#">
-    <span class="cmdName">#name_display#</span>
+    <div class="cmdName">#name_display#</div>
   </div>
   <div class="content">
     <div class="cursor execute imgCmd"></div>
