--- a/core/template/dashboard/cmd.action.slider.value.html
+++ b/core/template/dashboard/cmd.action.slider.value.html
@@ -1,11 +1,9 @@
 <div class="cmd cmd-widget" data-type="action" data-subtype="slider" data-template="value" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#">
   <div class="title #hide_name#">
-    <span class="cmdName">#name_display#</span>
+    <div class="cmdName">#name_display#</div>
   </div>
-  <div class="content-sm">
-    <div>
-      <input type="number" min="#minValue#" max="#maxValue#" id="sliderInput#id#">
-    </div>
+  <div class="content">
+    <input type="number" min="#minValue#" max="#maxValue#" id="sliderInput#id#">
     <div id="widget_slider#id#" class="slider"></div>
   </div>
   <div class="timeCmd label label-default #value_history#" data-type="info" data-cmd_id="#value_id#"></div>
