--- a/core/template/dashboard/cmd.info.binary.shutter.html
+++ b/core/template/dashboard/cmd.info.binary.shutter.html
@@ -1,8 +1,8 @@
 <div class="cmd cmd-widget shuttergauge #history#" data-type="info" data-subtype="binary" data-template="shutter" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#">
   <div class="title #hide_name#">
-    <span class="cmdName">#name_display#</span>
+    <div class="cmdName">#name_display#</div>
   </div>
-  <div class="content-sm">
+  <div class="content">
     <div class="shuttergauge-chart">
       <div class="shuttergauge-bckg">
         <div class="shuttergauge-value"></div>
@@ -13,6 +13,9 @@
     <span class="value"></span>
   </div>
   <div class="timeCmd label label-default #history#" data-type="info"></div>
+  <div class="cmdStats #hide_history#">
+    <span title="{{Minimum}}" class="tooltips">#minHistoryValue#</span>|<span title="{{Moyenne}}" class="tooltips">#averageHistoryValue#</span>|<span title="{{Maximum}}" class="tooltips">#maxHistoryValue#</span> <i class="#tendance#"></i>
+  </div>
   <template>
     <div>color : rgb(20,20,20) ({{Couleur du curseur et valeur}})</div>
     <div>time : duration|date ({{Affiche durée ou date de la valeur}})</div>
