--- a/core/template/dashboard/cmd.info.numeric.compass.html
+++ b/core/template/dashboard/cmd.info.numeric.compass.html
@@ -1,8 +1,8 @@
 <div class="cmd cmd-widget widget-compass #history#" data-type="info" data-subtype="numeric" data-template="compass" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#">
   <div class="title #hide_name#">
-    <span class="cmdName">#name_display#</span>
+    <div class="cmdName">#name_display#</div>
   </div>
-  <div class="content-lg">
+  <div class="content">
     <div class="widget-compass-container">
       <div class="widget-compass-outline"></div>
       <div class="widget-compass-needle-placer">
