--- a/core/template/dashboard/cmd.info.numeric.default.html
+++ b/core/template/dashboard/cmd.info.numeric.default.html
@@ -1,8 +1,8 @@
 <div class="cmd cmd-widget arcgauge #history#" data-type="info" data-subtype="numeric" data-template="default" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#">
   <div class="title #hide_name#">
-    <span class="cmdName">#name_display#</span>
+    <div class="cmdName">#name_display#</div>
   </div>
-  <div class="content-sm">
+  <div class="content">
     <div class="gauge cursor"></div>
     <div class="gaugeValue"></div>
   </div>
