--- a/core/template/dashboard/cmd.info.string.buttonImage.html
+++ b/core/template/dashboard/cmd.info.string.buttonImage.html
@@ -1,5 +1,5 @@
 <div class="cmd cmd-widget" data-type="info" data-subtype="string" data-template="buttonImage" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#">
-  <div class="content-sm">
+  <div class="content">
     <a class="btn btn-sm btn-default action tooltips">#name_display#</a>
   </div>
   <template></template>
