--- a/core/template/dashboard/cmd.info.string.tile.html
+++ b/core/template/dashboard/cmd.info.string.tile.html
@@ -1,10 +1,10 @@
 <div class="cmd cmd-widget #history#" data-type="info" data-subtype="string" data-template="tile" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#">
   <div class="title #hide_name#">
-    <span class="cmdName">#name_display#</span>
+    <div class="cmdName">#name_display#</div>
   </div>
-  <div class="content-sm">
+  <div class="content">
     <div>
-      <span class="value state"></span> <span class="unit pull-right"></span>
+      <span class="value state"></span> <span class="unit"></span>
     </div>
   </div>
   <div class="timeCmd label label-default #history#" data-type="info"></div>
