--- a/core/template/dashboard/cmd.info.string.multiline.html
+++ b/core/template/dashboard/cmd.info.string.multiline.html
@@ -24,7 +24,7 @@
     jeedom.cmd.refreshValue([{ cmd_id: '#id#', value: "#value#", display_value: "#state#", valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#' }])
 
     if (is_numeric('#maxHeight#')) {
-      document.querySelector('.cmd[data-cmd_uid="#uid#"] .content-xs').style.minHeight = '#maxHeight#px'
+      document.querySelector('.cmd[data-cmd_uid="#uid#"] .content-xs').style.maxHeight = '#maxHeight#px'
     }
   </script>
 </div>
