select widget test

--- a/core/template/dashboard/cmd.action.select.default.html
+++ b/core/template/dashboard/cmd.action.select.default.html
@@ -2,7 +2,7 @@
   <div class="title #hide_name#">
     <div class="cmdName">#name_display#</div>
   </div>
-  <div class="content">
+  <div class="content-xs">
     <select class="selectCmd">#listValue#</select>
   </div>
   <div class="timeCmd label label-default #value_history#" data-type="info" data-cmd_id="#value_id#"></div>
